<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Tap on the coins and bills you are putting in your wallet:"
            android:id="@+id/prompt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:minHeight="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="Current Total: $0.00"
            android:id="@+id/display"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="Delete"
            android:onClick="delete"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="Clear"
            android:onClick="clear"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="Checkout"
            android:onClick="goToCheckout"/>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:id="@+id/n">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/n"
            android:id="@+id/nim"
            android:tag="@string/n"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/d"
            android:id="@+id/dim"
            android:tag="@string/d"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/q"
            android:id="@+id/qim"
            android:tag="@string/q"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/loonie"
            android:id="@+id/loonieim"
            android:tag="@string/loonie"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/toonie"
            android:id="@+id/toonieim"
            android:tag="@string/toonie"
            android:onClick="addMoney"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:id="@+id/n2">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/five"
            android:id="@+id/five"
            android:tag="@string/five"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/ten"
            android:id="@+id/tenim"
            android:tag="@string/ten"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/twenty"
            android:id="@+id/twentyim"
            android:tag="@string/twenty"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/fifty"
            android:id="@+id/fiftyim"
            android:tag="@string/fifty"
            android:onClick="addMoney"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/hun"
            android:id="@+id/hunim"
            android:tag="@string/hun"
            android:onClick="addMoney"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Coins and bills currently in your wallet:"
            android:id="@+id/curWallet"/>

    </LinearLayout>

   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:tag="@string/wallet1"
       android:id="@+id/wallet1"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:tag="@string/wallet2"
        android:id="@+id/wallet2"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:tag="@string/wallet3"
        android:id="@+id/wallet3"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:tag="@string/wallet4"
        android:id="@+id/wallet4"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:tag="@string/wallet5"
        android:id="@+id/wallet5"></LinearLayout>

</LinearLayout>
